--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>0.75期トレーニング</title>
+</head>
 <body>
-
-<h1>Nakano-Meshi</h1>
-<h2>as a training</h2>
-
+<h1>0.75期のトレーニング</h1>
+<h2>中野飯編</h2>
+<p>このトレーニングは、中野の食事処候補を提供することで、メンバの意気を高めることを目的とする。</p>
 </body>
 </html>
