--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
 <h1>0.75期のトレーニング</h1>
 <h2>中野飯編</h2>
 <p>このトレーニングは、中野の食事処候補を提供することで、メンバの意気を高めることを目的とする。</p>
+<script src ="//maps.google.com/maps/api/js?sensor=true"></script>
+<script src ="//raw.githubusercontent.com/HPNeo/gmaps/master/gmaps.js"></script>
+<script>
+window.onload = function(){
+  var map = new GMaps ({
+      div: "#map",
+      lat: 38
+      lng: 138
+      zoom: 5
+  });
+};
+</script>
+
 </body>
 </html>
