--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>0.75期トレーニング</title>
+  <title>0.75期トレーニング</title>
+  <style type = "text/css">
+    #map {
+      width: 400px;
+      height: 400px;
+    }
+  </style>
 </head>
 <body>
-<h1>0.75期のトレーニング</h1>
-<h2>中野飯編</h2>
-<p>このトレーニングは、中野の食事処候補を提供することで、メンバの意気を高めることを目的とする。</p>
-<script src ="//maps.google.com/maps/api/js?sensor=true"></script>
-<script src ="//raw.githubusercontent.com/HPNeo/gmaps/master/gmaps.js"></script>
-<script>
-window.onload = function(){
-  var map = new GMaps ({
-      div: "#map",
-      lat: 38
-      lng: 138
-      zoom: 5
-  });
-};
-</script>
-
+  <h1>0.75期のトレーニング</h1>
+  <h2>中野飯編</h2>
+  <p>このトレーニングは、中野の食事処候補を提供することで、メンバの意気を高めることを目的とする。</p>
+  <script src ="//maps.google.com/maps/api/js?sensor=true"></script>
+  <script src ="//raw.githubusercontent.com/HPNeo/gmaps/master/gmaps.js"></script>
+  <script>
+    window.onload = function(){
+      var map = new GMaps ({
+          div: "#map",
+          lat: 38
+          lng: 138
+          zoom: 5
+      });
+    };
+  </script>
 </body>
 </html>
