--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
 <head>
   <title>0.75期トレーニング</title>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="gmaps.js"></script>
-  <style type = "text/css">
+  <style type = "text/javascript">
     #map {
       width: 400px;
       height: 400px;
     }
   </style>
 </head>
+
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="gmaps.js"></script>
+
 <body>
   <h1>0.75期のトレーニング</h1>
   <h2>中野飯編</h2>
   <p>このトレーニングは、中野の食事処候補を提供することで、メンバの意気を高めることを目的とする。</p>
-  <script src ="//maps.google.com/maps/api/js?sensor=true"></script>
-  <script src ="//raw.githubusercontent.com/HPNeo/gmaps/master/gmaps.js"></script>
-  <script>
+  <script type = "text/javascript">
     window.onload = function(){
       var map = new GMaps ({
           div: "#map",
