--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <html>
 <head>
   <title>0.75期トレーニング</title>
-  <style type = "text/javascript">
-    #map {
-      width: 400px;
-      height: 400px;
-    }
-  </style>
 </head>
 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -21,12 +15,21 @@
   <script type = "text/javascript">
     window.onload = function(){
       var map = new GMaps ({
-          div: "#map",
+          div: '#map',
           lat: 38
           lng: 138
           zoom: 5
       });
     };
   </script>
+  <style>
+    #map {
+      width: 400px;
+      height: 400px;
+    }
+  </style>
+  
+  <div id = "map"></div>
+  
 </body>
 </html>
