--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang = "ja">
+<html lang="ja">
 <head>
-  <meta charset = "UTF-8">
+  <meta charset="UTF-8">
   <title>0.75期トレーニング</title>
 </head>
 
-<script type = "text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type = "text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script type = "text/javascript" src="gmaps.js"></script>
-<script type = "text/javascript">
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="gmaps.js"></script>
+<script type="text/javascript">
   var map;
   $(document).ready(function(){
-    map = new GMaps ({
-      div: '#map',
+    map = new GMaps({
+      div: "#map",
       lat: 38,
       lng: 138,
       zoom: 5
@@ -28,7 +28,7 @@
 </style>
 
 <body>
-  <div id = "map"></div>
+  <div id="map"></div>
 </body>
 
 </html>
