--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>0.75期トレーニング</title>
-</head>
-
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script type="text/javascript" src="gmaps.js"></script>
-<script type="text/javascript">
-  var map;
-  $(document).ready(function(){
-    map = new GMaps({
-      div: "#map",
-      lat: 38,
-      lng: 138,
-      zoom: 5
-    });
-  };
-</script>
-
-<style>
-  #map {
-    width: 400px;
-    height: 400px;
-  }
-</style>
-
-<body>
-  <div id="map"></div>
-</body>
-
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>0.75期トレーニング</title>
+    <style>
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
+  </head>
+  <body>
+    <h3>Nakano_meshi</h3>
+    <div id="map"></div>
+    <script>
+      function initmap() {
+        var nakano = {lat: 35.703, lng: 139.662};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: nakano
+        });
+        var marker = new google.maps.Marker({
+          position: nakano,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+      src= "http://maps.google.com/maps/api/js?sensor=true&callback=initMap">
+    </script>
+  </body>
 </html>
