--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
     <script async defer
       src= "http://maps.google.com/maps/api/js?sensor=true&callback=initMap">
     </script>
+    <script async defer
+      src= "./env.xml">
+    </script>
   </body>
 </html>
