--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       src= "http://maps.google.com/maps/api/js?sensor=true&callback=initMap">
     </script>
     <script async defer
-      src= "./env.xml">
+      src= "./env.js">
     </script>
   </body>
 </html>
